--- a/_layouts/hunt.html
+++ b/_layouts/hunt.html
@@ -111,14 +111,14 @@
                 data-image="{{ '/assets/photo' | append: 2 | append: '.jpeg' | relative_url }}"
                 data-message="6 May 2024: Insane opportunity for me to remind you that I 
                 DONT forget we still need to watch the last 3 Starwars ;)
-                (We will need at least two liters of Soju tho, ONLY WAY TO MAKE THEM BAREBLE IM AFRIAD)"
+                (We will need at least two liters of Soju tho, ONLY WAY TO MAKE THEM BAREBLE TO WATCH THOSE IM AFRIAD)"
             />
             <img
                 src="{{ '/assets/blue_egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 3 | append: '.jpeg' | relative_url }}"
                 data-message="15 June 2024: CANNOT let you forget the best day of the year actually,
-                    cannot wait to see you the next time at the beach, hoping its Colombia?"
+                    cannot wait to see you the next time at the beach, hoping in Colombia ;)"
             />
             <img
                 src="{{ '/assets/blue_egg.png' | relative_url }}"
@@ -139,15 +139,15 @@
                 src="{{ '/assets/egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 6 | append: '.jpeg' | relative_url }}"
-                data-message="29 September 2024: Remembering now how we saw half of France from here jejeee,
-                            with the very traditional French food we also ate that day?? 
+                data-message="29 September 2024: Remembering now how we saw half of France from here,
+                            with the very traditional French food we also ate that day? 
                             (BEST BURGER AND FRIES EVER)"
             />
             <img
                 src="{{ '/assets/egg.png' | relative_url }}"
                 class="egg"
                 data-image="{{ '/assets/photo' | append: 7 | append: '.jpeg' | relative_url }}"
-                data-message="12 October 2024: I think we both agree, that the ride with the little caterpillar spinning around
+                data-message="12 October 2024: I think we both agree that the ride with the little caterpillar spinning around
                 was the wildest adventure we have ever been embarked on, couldn't have done that without you"
             />
             <img
