--- a/_layouts/reward.html
+++ b/_layouts/reward.html
@@ -99,7 +99,7 @@ David
     let index = 0;
 
     goldenEgg.addEventListener('click', () => {
-      goldenEgg.src = "{{ '/assets/golden-egg-cracked.png' | relative_url }}";
+      goldenEgg.src = "{{ '/assets/bunny.jpg' | relative_url }}";
       goldenEgg.classList.add('move-left');
       letterBox.classList.add('visible');
 
